--- a/journey.html
+++ b/journey.html
@@ -15,8 +15,8 @@
 </head>
 <body>
 
-	<!-- Navbar Section -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<!-- Navbar Section Start-->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-info">
 	  <a class="navbar-brand" href="#">Elisha</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -24,26 +24,63 @@
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav ml-auto">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="#">My Journey <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="#">My Journey | <span class="sr-only">(current)</span></a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Interests</a>
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#">Interests | </a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">My thoughts</a>
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#">My thoughts | </a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
 	      </li>
 	    </ul>
 	  </div>
 	</nav>
+	<!-- Navbar Section End-->
+
 	<div class="container-fluid p-3">
 		<h1 class="text-center p-3">My Journey</h1>
-		<div class="row">
-			<div>
-				
+		<div class="card">
+			<div class="card-body text-center col-12 col-md-8 col-xl-4">
+				<h3>Starting point</h3>
+				<p>I was born and raised in the land of the Oragons, the home of Magayon, my beloved Bicol Region.</p>
+				<h3>Education</h3>
+				<p>I'm an LPT from EARIST currently aspiring to be a Fullstack Web Developer at Zuitt.</p>
+				<h3>Work</h3>
+				<p>Worked as a CSR in the BPO industry and taught Japanese students ESL.</p>
+			
+					<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					  <ol class="carousel-indicators">
+					    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					  </ol>
+					  <div class="carousel-inner">
+					    <div class="carousel-item active">
+					      <img src="./images/guitar.jpg" class="d-block w-100" alt="..." class="container-fluid">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="./images/flower.jpg" class="d-block w-100" alt="..." class="container-fluid">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="./images/gray.jpg" class="d-block w-100" alt="..." class="container-fluid">
+					    </div>
+					  </div>
+					  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					    <span class="sr-only">Previous</span>
+					  </a>
+					  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					    <span class="sr-only">Next</span>
+					  </a>
+					</div>
+					</div>
+				</div>
 			</div>
+		</div>
 			
 		</div>
 		
