--- a/journey.html
+++ b/journey.html
@@ -40,51 +40,67 @@
 	</nav>
 	<!-- Navbar Section End-->
 
-	<div class="container-fluid p-3">
+	<!-- My Journey Start -->
+	<div class="container-fluid p-3" id="journey">
 		<h1 class="text-center p-3">My Journey</h1>
-		<div class="card">
-			<div class="card-body text-center col-12 col-md-8 col-xl-4">
+		<div>
+			<div class="card text-center col-12 col-md-8 col-xl-4">
 				<h3>Starting point</h3>
-				<p>I was born and raised in the land of the Oragons, the home of Magayon, my beloved Bicol Region.</p>
-				<h3>Education</h3>
-				<p>I'm an LPT from EARIST currently aspiring to be a Fullstack Web Developer at Zuitt.</p>
-				<h3>Work</h3>
-				<p>Worked as a CSR in the BPO industry and taught Japanese students ESL.</p>
-			
-					<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-					  <ol class="carousel-indicators">
-					    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-					    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-					    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-					  </ol>
-					  <div class="carousel-inner">
-					    <div class="carousel-item active">
-					      <img src="./images/guitar.jpg" class="d-block w-100" alt="..." class="container-fluid">
-					    </div>
-					    <div class="carousel-item">
-					      <img src="./images/flower.jpg" class="d-block w-100" alt="..." class="container-fluid">
-					    </div>
-					    <div class="carousel-item">
-					      <img src="./images/gray.jpg" class="d-block w-100" alt="..." class="container-fluid">
-					    </div>
-					  </div>
-					  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					    <span class="sr-only">Previous</span>
-					  </a>
-					  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-					    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-					    <span class="sr-only">Next</span>
-					  </a>
-					</div>
-					</div>
+				<p>I was born and raised in the land of the Oragons and home of Magayon, whose people are known for their love of chilli and for the smile on their faces while facing adversity, my beloved Bicol Region.</p>
+			</div>
+			<div class="card">
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				  <ol class="carousel-indicators">
+				    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				  </ol>
+				  <div class="carousel-inner">
+				    <div class="carousel-item active">
+				      <img src="./images/work3.jpg" class="d-block w-100" alt="..." class="container-fluid">
+				    </div>
+				    <div class="carousel-item">
+				      <img src="./images/work1.jpg" class="d-block w-100" alt="..." class="container-fluid">
+				    </div>
+				    <div class="carousel-item">
+				      <img src="./images/work2.jpg" class="d-block w-100" alt="..." class="container-fluid">
+				    </div>
+				  </div>
+				  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Previous</span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Next</span>
+				  </a>
 				</div>
 			</div>
+			<div class="card text-center">
+				<h3>Education</h3>
+				<p>I'm an LPT from EARIST aspiring to be a Fullstack Web Developer at Zuitt.</p>
+				<h3>Work</h3>
+				<p>Worked as a CSR in the BPO industry and taught Japanese students ESL.</p>
+			</div>
 		</div>
-			
-		</div>
-		
+	<!-- My Journey End -->
+
+	<!-- Interest section start -->
+	<div >
 	</div>
+	<!-- Interest section end -->
+
+	<!-- My thoughts section start -->
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col">
+				
+			</div>
+		</div>
+	</div>
+	<!-- My thoughts section end -->
+	</div>
+
 	
 
 	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
