--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<img src="./images/gray.jpg" class="container-fluid rounded-circle">
 
 					<div class="centered">
-						<h4 class="pl-5">
+						<h4 class="home pl-5">
 							<em>
 							Hi! I'm Elisha Japa
 							</em>
