--- a/journey.html
+++ b/journey.html
@@ -17,14 +17,14 @@
 
 	<!-- Navbar Section Start-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-info">
-	  <a class="navbar-brand" href="#">Elisha</a>
+	  <a class="navbar-brand" href="./images/index.html">Elisha</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav ml-auto">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="#">My Journey | <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="#journey1">My Journey | <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item active">
 	        <a class="nav-link" href="#">Interests | </a>
@@ -41,7 +41,7 @@
 	<!-- Navbar Section End-->
 
 	<!-- My Journey Start -->
-	<div class="container-fluid p-3" id="journey">
+	<div class="journey1 container-fluid p-3" id="journey">
 		<h1 class="text-center p-3">My Journey</h1>
 		<div>
 			<div class="card text-center col-12 col-md-8 col-xl-4">
@@ -86,7 +86,12 @@
 	<!-- My Journey End -->
 
 	<!-- Interest section start -->
-	<div >
+	<div class="books">
+	  <img src="./images/books.jpg" alt="books" style="width:100%;">
+	  <div class="content">
+	    <h1>Books</h1>
+	    <p>My favorite aauthors are Nicholas Sparks, Danielle Steel and Bob Ong.</p>
+	  </div>
 	</div>
 	<!-- Interest section end -->
 
