--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	    <!-- Background image -->
 	    <style>
 	    body {
-		background-image: url(./images/abstract.jpg);
+		background-image: url(./images/guitar.jpg);
 		}
 		</style>
 
