--- a/journey.html
+++ b/journey.html
@@ -31,7 +31,7 @@
 
 	<!-- Navbar Section Start-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-	  <a class="navbar-brand" href="./images/index.html">Elisha</a>
+	  <a class="nav-link" href="./images/index.html">Elisha</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
