--- a/journey.html
+++ b/journey.html
@@ -92,9 +92,9 @@
 						</div>
 						<div class="card text-center bg-transparent" id="education">
 							<h3>Education</h3>
-							<p>I'm an LPT from EARIST aspiring to be a Fullstack Web Developer at Zuitt.</p>
+							<p>I'm an LPT from EARIST aspiring to be a Fullstack Web Developer.</p>
 							<h3>Work</h3>
-							<p>Worked as a CSR in the BPO industry and taught Japanese students ESL.</p>
+							<p>Worked as a CSR in the BPO industry and taught Japanese students ESL and also in a classroom setup with JHS students.</p>
 						</div>
 					</div>
 				<!-- My Journey End -->
