--- a/journey.html
+++ b/journey.html
@@ -94,7 +94,7 @@
 							<h3>Education</h3>
 							<p>I'm an LPT from EARIST aspiring to be a Fullstack Web Developer.</p>
 							<h3>Work</h3>
-							<p>Worked as a CSR in the BPO industry and taught Japanese students ESL and also in a classroom setup with JHS students.</p>
+							<p>Worked as a CSR and as an ESL teacher for Japanese students and JHS students in a classroom setup.</p>
 						</div>
 					</div>
 				<!-- My Journey End -->
