Add end message

--- a/journey.html
+++ b/journey.html
@@ -198,6 +198,8 @@
 				<!-- My thoughts section end -->
 	</div>
 <div>
+				<h4 class="end1 text-center">And... that's it! </h4>
+				<h4 class="end2 text-center">Thank you for visiting my profile and getting to know me!🥰🥰🥰</h4>
 				<footer class="bg-secondary p-0" id="follow">
 					<span class="pl-3">Follow me on</span>
 					<span>|</span>
