--- a/journey.html
+++ b/journey.html
@@ -203,7 +203,7 @@
 				<footer class="bg-secondary p-0" id="follow">
 					<span class="pl-3">Follow me on</span>
 					<span>|</span>
-					<span><a href="https://www.facebook.com/ella.japa/">Facebook</a></span>
+					<span class="li"><a href="https://www.facebook.com/ella.japa/" type="_blank">Facebook</a></span>
 					<span>|</span>
 					<span><a href="https://www.instagram.com/elishaelj/?hl=en">IG</a></span>
 					<span>|</span>
