place target blank link

--- a/journey.html
+++ b/journey.html
@@ -203,11 +203,11 @@
 				<footer class="bg-secondary p-0" id="follow">
 					<span class="pl-3">Follow me on</span>
 					<span>|</span>
-					<span class="li"><a href="https://www.facebook.com/ella.japa/" type="_blank">Facebook</a></span>
+					<span class="li"><a href="https://www.facebook.com/ella.japa/" target="_blank">Facebook</a></span>
 					<span>|</span>
-					<span><a href="https://www.instagram.com/elishaelj/?hl=en">IG</a></span>
+					<span><a href="https://www.instagram.com/elishaelj/?hl=en" target="blank">IG</a></span>
 					<span>|</span>
-					<span><a href="https://twitter.com/elliissha">Twitter</a></span>
+					<span><a href="https://twitter.com/elliissha" target="blank">Twitter</a></span>
 				</footer>
 
 	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
